# polyrungis

./: .gitignore  CLAUDE.md  Cargo.toml  NOTICE  README.md  config.exemple.toml  install.sh
analysis/: audit_latences.py  backtest_corpus.sh  config_certitude_seule.toml  config_prudent.toml  diag_ordres.py  etude.py  etude2.py  etude3.py  etude4_humain.py  etude5_spot.py  etude6_frontiere.py  etude6b_balayage.py  etude7_frontiere_dyn.py  extract.py
analysis/eth/: addendum_latence.py  etude_eth.py  extract_eth.py
art/: logo_compact.txt  mascotte.txt  wordmark.txt
crates/pm-acquisition/: Cargo.toml
crates/pm-acquisition/src/: binance.rs  bus.rs  clob.rs  gamma.rs  lib.rs  net.rs  recorder.rs  rtds.rs  watchdog.rs
crates/pm-bot/: Cargo.toml
crates/pm-bot/src/: main.rs
crates/pm-collect/: Cargo.toml
crates/pm-collect/src/: main.rs
crates/pm-core/: Cargo.toml
crates/pm-core/src/: book.rs  events.rs  lib.rs  math.rs  parse.rs  strike.rs  vol.rs  window.rs
crates/pm-dash/: Cargo.toml
crates/pm-dash/src/: main.rs  page.html
crates/pm-execution/: Cargo.toml
crates/pm-execution/src/: lib.rs  risk.rs
crates/pm-replay/: Cargo.toml
crates/pm-replay/src/: backtest.rs  legacy.rs  lib.rs  main.rs  v2.rs
crates/pm-strategy/: Cargo.toml
crates/pm-strategy/src/: calib.rs  config.rs  lib.rs  maker.rs  model.rs  paper.rs  taker.rs
docs/: ARCHITECTURE.md  AUDIT_ROBUSTESSE.md  AUDIT_VITESSE.md  CONFIGURATION.md  CREDENTIALS.md  DECISIONS.md  DEPLOIEMENT_UPCLOUD.md  ETUDE_MODELE.md  HISTORIQUE.md  IDENTITE.md  INSTALLATION_FEDORA.md  LIGNE_EFFICIENCE.md  MODELE_V3.md  MVP_REEL.md  PHASE1_FINDINGS.md  PLAN_CHANTIERS_DASH_DOC.md  RAPPORT_NUIT_20260706.md  README.md  ROADMAP.md  VALIDATION_LIVE.md  VISION.md
docs/prospective/: AUDIT_MILESTONE1.md  DIAG_ORDRES.md  MODELE_ETH.md  PLAN_MULTI_EVENT.md
scripts/: campaign.sh  micro-test.sh  pm-ctl  tester-ordres.sh
