[package]
name = "pm-acquisition"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
pm-core = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }
reqwest = { workspace = true }
tracing = { workspace = true }
