[package]
name = "pm-collect"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "pm-collect"
path = "src/main.rs"

[dependencies]
pm-core = { workspace = true }
pm-acquisition = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
