[package]
name = "pm-dash"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "pm-dash"
path = "src/main.rs"

[dependencies]
pm-core = { workspace = true }
pm-strategy = { workspace = true }
anyhow = { workspace = true }
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
