[package]
name = "pm-replay"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
pm-core = { workspace = true }
pm-strategy = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[[bin]]
name = "pm-replay"
path = "src/main.rs"

[[bin]]
name = "pm-backtest"
path = "src/backtest.rs"
